--- a/css/all.css
+++ b/css/all.css
@@ -1,35 +1,13 @@
-.arrow {
+#returnBtn{
+    position: fixed;
+    border: none;
     cursor: pointer;
-    position: absolute;
     top: 10%;
     margin-top: -50px;
-    width: 0;
-    height: 0;
-    border-style: solid;
+    font-size: 100px;
+    height: 50px;
+    width: 50px;
+    margin-left: 30px;
 }
 
-.arrow2 {
-    cursor: pointer;
-    position: absolute;
-    top: 90%;
-    margin-top: -50px;
-    width: 0;
-    height: 0;
-    border-style: solid;
-}
 
-#leftArrowBtn{
-     border-width: 60px 80px 60px 0;
-     border-color: transparent #fff transparent transparent;
-     left: 0;
-     margin-left: 30px;
- }
-
-
-
-#rightArrowBtn{
-    border-width: 60px 0 60px 80px;
-    border-color: transparent transparent transparent #fff;
-    right: 0;
-    margin-right: 30px;
-}
