Something idk man

--- a/css/all.css
+++ b/css/all.css
@@ -16,8 +16,8 @@
     cursor: pointer;
     width: 10%;
     height: auto;
-    top: 20%;
-    margin-left: 10px;
+    top: 10%;
+    margin-left: 10%;
 
 }
 
