--- a/SelectGame/SelectGame.css
+++ b/SelectGame/SelectGame.css
@@ -47,14 +47,20 @@ body{
     border: none;
     cursor: pointer;
     top: 80%;
-    margin-top: -50px;
+    color: aqua;
     font-size: 100px;
     height: 50px;
     width: 50px;
-    margin-right: 10px;
+
     right: 10%;
     display: none;
 }
+
+#returnBtn{
+    color: aqua;
+}
+
+
 
 
 
