--- a/css/all.css
+++ b/css/all.css
@@ -1,25 +1,26 @@
 #returnBtn{
-    position: fixed;
+    position: absolute;
+    display: block;
     border: none;
     cursor: pointer;
-    top: 10%;
-    margin-top: -50px;
+
     font-size: 100px;
+    top: 20px;
+    left: 20px;
     height: 50px;
     width: 50px;
-    margin-left: 30px;
+
 }
 
 
 #speaker {
     position: absolute;
+    display: block;
     cursor: pointer;
-    width: 10%;
+    width: 8%;
     height: auto;
-    top: 10%;
-    margin-top: -50px;
-    margin-left: 10%;
-    right: 30px;
+    top: 15px;
+    left: 150px;
 
 }
 
