--- a/SelectGame/SelectGame.css
+++ b/SelectGame/SelectGame.css
@@ -47,7 +47,7 @@ body{
     border: none;
     cursor: pointer;
     top: 80%;
-    color: aqua;
+    color: #060AB2;
     font-size: 100px;
     height: 50px;
     width: 50px;
@@ -57,9 +57,19 @@ body{
 }
 
 #returnBtn{
-    color: aqua;
+    color: #060AB2;
 }
 
+
+.shadow {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    box-shadow: inset 0 0 40px  #00ff0e;
+    pointer-events:none;
+    top: 0;
+    left: 0;
+}
 
 
 
