--- a/WordsGame/WordsGame.css
+++ b/WordsGame/WordsGame.css
@@ -62,7 +62,7 @@ body{
 }
 
 #returnBtn{
-    color: aqua;
+    color: #060AB2;
 }
 
 #foobar { display: none }
@@ -110,6 +110,16 @@ body{
     padding:16px 31px;
     text-decoration:none;
     /*text-shadow:0px 1px 0px #2f6627;*/
+}
+
+.shadow {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    box-shadow: inset 0 0 40px  #00ff0e;
+    pointer-events:none;
+    top: 0;
+    left: 0;
 }
 
 
